<resources>
    <string name="app_name">XMap</string>
    <string name="rb_index">首页</string>
    <string name="rb_me">我的</string>
    <string name="fab_location">定位按钮</string>
    <string name="search_query_hint">查找地点</string>
    <string name="road_plan">路线规划</string>
    <string name="back">返回</string>
    <string name="add_point">添加途径点</string>
    <string name="rb_text_drive">驾车</string>
    <string name="rb_text_bus">公交</string>
    <string name="input_origin">输入起点</string>
    <string name="input_destination">输入终点</string>
    <string name="input_route">输入途径点</string>
    <string name="search">搜索</string>
    <string name="road">路线</string>
    <string name="is_loading">正在加载中···</string>
    <string name="start_navi">开始导航</string>
    <string name="view_detail">查看详情</string>
    <string name="fold_detail">收起详情</string>
    <string name="divider">分割线</string>
    <string name="no_bus_route_result">该线路没有公交换乘信息</string>
    <string name="no_drive_route_result">无驾车规划路线</string>
    <string name="welcome">欢迎使用XMap</string>
    <string name="need_permission">XMap提供的服务需要以下权限：</string>
    <string name="storage_permission">·存储权限</string>
    <string name="location_permission">·定位权限</string>
    <string name="phone_permission">·电话权限</string>
    <string name="agree">同意</string>
    <string name="deny">拒绝</string>
    <string name="click_to_login">点击登录</string>
    <string name="about">关于</string>
    <string name="log_out">注销登录</string>
    <string name="avatar">头像</string>
    <string name="clear">清除</string>
    <string name="clear_history_record">清除历史记录</string>
    <string name="route_line">路线</string>
    <string name="hotel">酒店</string>
    <string name="market">超市</string>
    <string name="bank">银行</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
</resources>