<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simple_info"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/lrb_corner_shape_white"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="@dimen/default_icon_size"
                android:layout_height="@dimen/default_icon_size"
                android:layout_marginEnd="10dp"
                android:scaleType="fitXY"
                android:background="@null"
                android:contentDescription="@string/back"
                android:src="@drawable/back" />

            <SearchView
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:background="@drawable/search_view_background"
                android:queryHint="@string/search_query_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/near_hotel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/button_primary"
                android:text="@string/hotel" />

            <Button
                android:id="@+id/near_market"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/button_primary"
                android:text="@string/market" />

            <Button
                android:id="@+id/near_bank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/button_primary"
                android:text="@string/bank" />
        </LinearLayout>
    </LinearLayout>

    <com.liangnie.xmap.views.LoadMoreListView
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/lrt_corner_shape_white"
        android:layout_below="@+id/header" />

    <RelativeLayout
        android:id="@+id/history_search_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/lrt_corner_shape_white"
        android:layout_below="@+id/header"
        android:clickable="true"
        android:focusable="true">

        <ListView
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/history_clear"/>

        <TextView
            android:id="@+id/history_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_horizontal"
            android:textColor="@color/primary"
            android:text="@string/clear_history_record"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</RelativeLayout>