<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:gravity="center_vertical"
        android:background="@drawable/tb_linear_gradients_primary"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/white_background"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/avatar" />

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_to_login"
                android:textSize="30sp"
                android:lines="1"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:ellipsize="marquee"
                android:visibility="gone"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_below="@+id/header"
        android:layout_above="@+id/footer"
        android:background="@drawable/lrt_corner_shape_white"
        android:elevation="@dimen/elevation_default">

        <Button
            android:id="@+id/about_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:gravity="start|center_vertical"
            android:padding="10dp"
            android:text="@string/about"
            android:textSize="20sp"
            android:textColor="@color/primary"
            android:background="@drawable/white_background" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:elevation="@dimen/elevation_default"
        android:padding="10dp">

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:background="@drawable/primary_background"/>
    </FrameLayout>
</RelativeLayout>